--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -20,7 +20,7 @@
   <!-- include spec files here... -->
   <!-- <script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script> -->
-  <script src="spec/CalculatorTest.js"></script>
+  <script src="spec/MySpec.js"></script>
 
 </head>
 
