--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -21,6 +21,7 @@
   <!-- <script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script> -->
   <script src="spec/MySpec.js"></script>
+  <script src="spec/PusrchaseOrder.js"></script>
 
 </head>
 
